--- a/Preprocessing_Block.ipynb
+++ b/Preprocessing_Block.ipynb
@@ -578,17 +578,17 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.0 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.8.2 (default, Aug 10 2020, 05:49:21) \n[Clang 12.0.0 (clang-1200.0.31.1)]"
+      "version": "3.10.0"
     },
     "vscode": {
       "interpreter": {
-        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+        "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
       }
     }
   },
