--- a/TARCC_Demo.ipynb
+++ b/TARCC_Demo.ipynb
@@ -2,12 +2,12 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "**Access and download 'TARCC_data.csv', 'pickled_combined_features_list.pkl', and 'rf_model_best.pkl' files from folder 'Data' on github. Save into your folder in Google Colab. Once you have everything in place, you may select 'Run all' from the 'Runtime' tab.** "
-      ],
       "metadata": {
         "id": "HsvhRFRFvBgF"
-      }
+      },
+      "source": [
+        "**Access and download 'TARCC_data.csv', 'pickled_combined_features_list.pkl', and 'rf_model_best.pkl' files from folder 'Data' on github. Save into your folder in Google Colab. Once you have everything in place, you may select 'Run all' from the 'Runtime' tab.** "
+      ]
     },
     {
       "cell_type": "markdown",
@@ -30,8 +30,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -54,8 +54,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting kmodes\n",
@@ -184,18 +184,29 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Demo/Main"
-      ],
       "metadata": {
         "id": "vW3gGAiru5WL"
-      }
+      },
+      "source": [
+        "## Demo/Main"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nGuJaf0IyZeo"
+      },
+      "outputs": [],
       "source": [
         "def preprocessing(data):\n",
-        "\n",
+        "  \"\"\"\n",
+        "  This function retains relevant features from dataset\n",
+        "  INPUT: \n",
+        "    data -- <pandas.DataFrame> raw biological dataset\n",
+        "  OUTPUT: \n",
+        "    df -- <pandas.DataFrame> cleaned dataset\n",
+        "  \"\"\"\n",
         "  #subset the data to the patient visits where blood samples are taken\n",
         "  df_with_RBM = data[data['RBM_Rule_Based_Medicine']==1]\n",
         "  #retain only relevant blood + protein + disorders features with biological factors like age, sex,etc.\n",
@@ -258,15 +269,15 @@
         "  #removing diagnosis variables that are 3 or 4\n",
         "  df = df[df['P1_PT_TYPE'].isin([1,2])]\n",
         "  return df"
-      ],
-      "metadata": {
-        "id": "nGuJaf0IyZeo"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "mN9EbKHmwMPa"
+      },
+      "outputs": [],
       "source": [
         "def get_data(non_genetic_df):\n",
         "\n",
@@ -355,15 +366,15 @@
         "    plt.xlabel('Predicted Labels')\n",
         "    plt.ylabel('True Labels')\n",
         "    plt.show()\n"
-      ],
-      "metadata": {
-        "id": "mN9EbKHmwMPa"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jQRGEl6lu9NF"
+      },
+      "outputs": [],
       "source": [
         "# insert TARCC data from your Colab drive\n",
         "non_genetic_df = pd.read_csv(\"insert your path to TARCC data here\", low_memory=False)\n",
@@ -392,12 +403,7 @@
         "# evaluate on test set\n",
         "y_pred = clf.predict(X_test)\n",
         "evaluation(y_test, y_pred)"
-      ],
-      "metadata": {
-        "id": "jQRGEl6lu9NF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
@@ -412,10 +418,17 @@
     },
     "kernelspec": {
       "display_name": "Python 3",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.8.2 (default, Aug 10 2020, 05:49:21) \n[Clang 12.0.0 (clang-1200.0.31.1)]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+      }
     }
   },
   "nbformat": 4,
