data labels production

--- a/data_labels.ipynb
+++ b/data_labels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "4  0=No, 1=Yes. The CCR data items represent acti...                 NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,15 +155,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Misc_TARC_PAT': 'Patient ID'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def get_desc_table(cols) -> dict:\n",
     "    descs = {}\n",
     "    for col in cols:\n",
-    "        descs[col] = get_desc(col)\n",
-    "    return descs"
+    "        row = codebook.query(f\"`Variable Name` == '{col}'\")\n",
+    "        descs[col] = row[\"Description\"][0]\n",
+    "    return descs\n",
+    "\n",
+    "get_desc_table([\"Misc_TARC_PAT\"])"
    ]
   }
  ],
