--- a/data_correlations.ipynb
+++ b/data_correlations.ipynb
@@ -10,18 +10,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'get_desc_table' from 'data_labels' (c:\\Users\\xabbo\\Desktop\\TARCC\\TARCC_F22\\data_labels.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2492/988649237.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mdata_cleaning\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mget_cleaned_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mdata_labels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mget_desc_table\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_cleaned_data\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'get_desc_table' from 'data_labels' (c:\\Users\\xabbo\\Desktop\\TARCC\\TARCC_F22\\data_labels.py)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\xabbo\\AppData\\Local\\Temp/ipykernel_14160/1092870935.py:15: DtypeWarning: Columns (30,157,383,384,393,480,724,725,762) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  df = get_cleaned_data()\n",
+      "WARNING:root:Key A1_RACETER is missing from the dataframe.\n",
+      "WARNING:root:Key A1_PRIMLANG is missing from the dataframe.\n",
+      "WARNING:root:Key A1_EDUC is missing from the dataframe.\n",
+      "WARNING:root:Key A1_LIVSIT is missing from the dataframe.\n",
+      "WARNING:root:Key A1_INDEPEND is missing from the dataframe.\n",
+      "WARNING:root:Key A1_REFER is missing from the dataframe.\n",
+      "WARNING:root:Key A3_TWIN is missing from the dataframe.\n",
+      "WARNING:root:Key A3_SIBS is missing from the dataframe.\n",
+      "WARNING:root:Key A3_SIBSDEM is missing from the dataframe.\n",
+      "WARNING:root:Key A3_KIDS is missing from the dataframe.\n",
+      "WARNING:root:Key A3_KIDSDEM is missing from the dataframe.\n",
+      "WARNING:root:Key A41_PMCSTDA is missing from the dataframe.\n",
+      "WARNING:root:Key A41_PMCSTMO is missing from the dataframe.\n",
+      "WARNING:root:Key A41_PMCSTYR is missing from the dataframe.\n",
+      "WARNING:root:Key A41_PMDSTDA is missing from the dataframe.\n",
+      "WARNING:root:Key A41_PMDSTMO is missing from the dataframe.\n",
+      "WARNING:root:Key A41_PMDSTYR is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEASTMO is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEASTDA is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEASTYR is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEAENDMO is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEAENDDA is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEAENDYR is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEBSTMO is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEBSTDA is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEBSTYR is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEBENDMO is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEBENDDA is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEBENDYR is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VECSTMO is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VECSTDA is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VECSTYR is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VECENDMO is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VECENDDA is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VECENDYR is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEDSTMO is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEDSTDA is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEDSTYR is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEDENDMO is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEDENDDA is missing from the dataframe.\n",
+      "WARNING:root:Key A42_VEDENDYR is missing from the dataframe.\n",
+      "WARNING:root:Key C1_AMNART is missing from the dataframe.\n",
+      "WARNING:root:Key C1_WAT is missing from the dataframe.\n",
+      "WARNING:root:Key P1_PTTYPEDESC is missing from the dataframe.\n",
+      "WARNING:root:Key X1_DECLINEAGEPHY is missing from the dataframe.\n",
+      "WARNING:root:Key X1_DECLINEAGE is missing from the dataframe.\n",
+      "WARNING:root:Key X1_PHYESTDUR is missing from the dataframe.\n"
      ]
     }
    ],
@@ -33,17 +77,19 @@
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import openpyxl\n",
     "\n",
     "from data_cleaning import get_cleaned_data\n",
     "\n",
-    "from data_labels import get_desc_table\n",
+    "\n",
+    "# from data_labels import get_desc_table\n",
     "\n",
     "df = get_cleaned_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +138,7 @@
        "(559, 559)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +200,7 @@
        "35"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +224,7 @@
        "(35, 35)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +250,7 @@
        "Text(0.5, 1.0, 'Correlation Matrix')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -237,23 +283,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "codebook = pd.read_excel(\"20220602-TARCC-Codebook.xlsx\")\n",
+    "\n",
+    "codebook[\"Variable Name\"] = codebook[\"Variable Name\"].astype(str)\n",
+    "\n",
+    "codebook[\"Variable Name\"] = codebook[\"Variable Name\"].apply(str.upper)\n",
+    "\n",
+    "val = codebook[codebook[\"Variable Name\"] == str('A41_PMBS')][\"Description\"].values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_desc_table(cols):\n",
+    "    descs = []\n",
+    "    for col in cols:\n",
+    "        entry = {}\n",
+    "        col = str(col).upper()\n",
+    "        row = codebook[codebook[\"Variable Name\"] == col]\n",
+    "        entry[\"Variable Name\"] = col\n",
+    "        entry[\"Description\"] = row[\"Description\"].values\n",
+    "        descs.append(entry)\n",
+    "    for entry in descs:\n",
+    "        if len(entry[\"Description\"]) != 0:\n",
+    "            entry[\"Description\"] = entry[\"Description\"][0]\n",
+    "        else:\n",
+    "            entry[\"Description\"] = \"Incompatible\"\n",
+    "    return descs\n",
+    "\n",
+    "dictionary = get_desc_table(list(corr_values.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'corr_values' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2492/1817303702.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcorr_values\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'corr_values' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35 [{'Variable Name': 'A41_PMBS', 'Description': 'Prescription B: Strength'}, {'Variable Name': 'A43_ADDRT', 'Description': 'Anti-dementia Drug Hx D: Route'}, {'Variable Name': 'A44_SSBSTMO', 'Description': 'Systemic Steroids Hx B: Start date (month)'}, {'Variable Name': 'A44_SSBSTYR', 'Description': 'Systemic Steroids Hx B: Start date (year)'}, {'Variable Name': 'A44_SSCSTMO', 'Description': 'Systemic Steroids Hx C: Start date (month)'}, {'Variable Name': 'A44_SSCSTYR', 'Description': 'Systemic Steroids Hx C: Start date (year)'}, {'Variable Name': 'A44_SSDRT', 'Description': 'Systemic Steroids Hx D: Route'}, {'Variable Name': 'C1_SS_WMS3_VR_II', 'Description': 'Scaled Score WMS-3 Visual Reproduction 2'}, {'Variable Name': 'C1_SS_WMSR_VR_II', 'Description': 'Scaled Score WMS-R Visual Reproduction 2'}, {'Variable Name': 'C1_WAISR_DIGIB', 'Description': 'WAIS-R Digit Span Backward'}, {'Variable Name': 'C1_WMSR_VR_D', 'Description': 'WMS-R VR 1 Figure D'}, {'Variable Name': 'D1_PNAPH', 'Description': 'DX Progressive nonfluent aphasia'}, {'Variable Name': 'D1_SEMDEMAN', 'Description': 'DX Semantic dementia - anomia plus word comprehension'}, {'Variable Name': 'PROTEO_EOTAXIN_HUMAN', 'Description': 'Incompatible'}, {'Variable Name': 'PROTEO_IFN_Y_HUMAN', 'Description': 'Incompatible'}, {'Variable Name': 'PROTEO_IL_15', 'Description': 'Incompatible'}, {'Variable Name': 'PROTEO_MCP_4_HUMAN', 'Description': 'Incompatible'}, {'Variable Name': 'PROTEO_MDC_HUMAN', 'Description': 'Incompatible'}, {'Variable Name': 'PROTEO_MIP_1A_HUMAN', 'Description': 'Incompatible'}, {'Variable Name': 'PROTEO_SAA', 'Description': 'Incompatible'}, {'Variable Name': 'PROTEO_VEGF_ANGIO_PLATE', 'Description': 'Incompatible'}, {'Variable Name': 'RBM_ALPHA_2', 'Description': 'Alpha-2 Macroglobulin  0.0608 mg/mL '}, {'Variable Name': 'RBM_ALPGA_F', 'Description': 'Incompatible'}, {'Variable Name': 'RBM_AXL', 'Description': 'AXL 106167 <0.10 ng/mL '}, {'Variable Name': 'RBM_BLC', 'Description': 'B-Lymphocyte Chemoattractant (BLC) 106167 55.1 pg/ml '}, {'Variable Name': 'RBM_CA_125', 'Description': 'Cancer Antigen 125  4.22 U/mL '}, {'Variable Name': 'RBM_CEA', 'Description': 'Carcinoembryonic Antigen  0.841 ng/mL '}, {'Variable Name': 'RBM_EGF', 'Description': 'EGF  7.35 pg/mL '}, {'Variable Name': 'RBM_ACTIVE_GLP_1', 'Description': 'GLP-1 active (Glucagon-like Peptide-1, active form)  9.9 pg/mL '}, {'Variable Name': 'RBM_HAPTOGLOBIN', 'Description': 'Haptoglobin  0.025 mg/mL '}, {'Variable Name': 'RBM_MMP_3', 'Description': 'MMP-3  0.2 ng/mL '}, {'Variable Name': 'Q1_YKL_40', 'Description': 'YKL-40 (Chitinase 3-like 1) pg/ml'}, {'Variable Name': 'F1_PSMS2', 'Description': 'Physical Self Maintenace Scale,Feeding'}, {'Variable Name': 'F1_PSMS4', 'Description': 'Physical Self Maintenace Scale,Grooming'}, {'Variable Name': 'F1_PSMS6', 'Description': 'Physical Self Maintenace Scale,Bathing'}]\n"
      ]
     }
    ],
    "source": [
-    "corr_values.columns"
+    "print(len(dictionary), dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_names = pd.DataFrame(data=dictionary)\n",
+    "data_names.to_excel(\"data_names.xlsx\", index=False)"
    ]
   }
  ],
