--- a/main.ipynb
+++ b/main.ipynb
@@ -9,12 +9,16 @@
    "outputs": [],
    "source": [
     "# TODO: Convert datastats file to a bunch of functions; import/call them here.\n",
-    "from preprocessing.data_cleaning import get_cleaned_data"
+    "from preprocessing.data_cleaning import get_cleaned_data\n",
+    "from exploration.data_correlations import plot_correlations"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -137,38 +141,50 @@
     }
    ],
    "source": [
-    "df = get_cleaned_data()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "df = get_cleaned_data()\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "51002220    13\n51002377    12\n51002233    12\n51002024    12\n51002376    12\n            ..\n55000265     1\n55000255     1\n55000247     1\n55000239     1\n81200235     1\nName: PATID, Length: 3670, dtype: int64"
+      "text/plain": [
+       "51002220    13\n",
+       "51002377    12\n",
+       "51002233    12\n",
+       "51002024    12\n",
+       "51002376    12\n",
+       "            ..\n",
+       "55000265     1\n",
+       "55000255     1\n",
+       "55000247     1\n",
+       "55000239     1\n",
+       "81200235     1\n",
+       "Name: PATID, Length: 3670, dtype: int64"
+      ]
      },
      "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": [
+    "plot_correlations()"
+   ]
   }
  ],
  "metadata": {
