--- a/main.ipynb
+++ b/main.ipynb
@@ -1252,7 +1252,7 @@
     }
    ],
    "source": [
-    "# run_elastic_net(combined, num_iters=20, pickle=\"Combined LR\")\n",
+    "run_elastic_net(combined, num_iters=20, pickle=\"Combined LR\")\n",
     "combined_lr = evaluate_results(\"Combined LR\")"
    ]
   },
