--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
     "from exploration.data_correlations import plot_correlations\n",
     "from exploration.data_statistics import plot_labels_pie_chart, plot_blood_draw_statistics\n",
     "from exploration.midterm_exploration import plot_feature_against_diagnosis\n",
-    "from exploration.feature_selection import plot_mrmr_features, plot_rf_features, plot_mrmr_features_scaled, plot_rf_features_scaled\n",
+    "from exploration.feature_selection import plot_mrmr_features, plot_rf_features, plot_mrmr_features_scaled, plot_rf_features_scaled, plot_mrmr_and_rf\n",
     "from modeling.mrmr import plot_accuracy_with_features, perform_mrmr\n",
     "from modeling.logistic import run_elastic_net, evaluate_results\n",
     "from modeling.RandomForest import run_random_forest\n",
@@ -3887,17 +3887,25 @@
    ],
    "source": [
     "micro_f1_scores_b, feature_importances_b, confusion_matrices_b, r_b, features_b = run_random_forest(blood_only)\n",
-    "micro_f1_scores_c, feature_importances_c, confusion_matrices_c, r_c, features_c = run_random_forest(clinical_only)\n",
-    "micro_f1_scores_combined, feature_importances_combined, confusion_matrices_combined, r_combined, features_combined = run_random_forest(combined)\n",
+    "# micro_f1_scores_c, feature_importances_c, confusion_matrices_c, r_c, features_c = run_random_forest(clinical_only)\n",
+    "# micro_f1_scores_combined, feature_importances_combined, confusion_matrices_combined, r_combined, features_combined = run_random_forest(combined)\n",
     "\n",
-    "\n",
+    "plot_mrmr_and_rf(blood_scores, r_b, features_b)\n",
+    "# plot_mrmr_and_rf(clinical_scores, r_c, features_c)\n",
+    "# plot_mrmr_and_rf(combined_scores, r_combined, features_combined)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "plot_rf_features(r_b, features_b)\n",
     "plot_rf_features(r_c, features_c)\n",
-    "plot_rf_features(r_combined, features_combined)\n",
-    "\n",
-    "plot_rf_features_scaled(r_b, features_b)\n",
-    "plot_rf_features_scaled(r_c, features_c)\n",
-    "plot_rf_features_scaled(r_combined, features_combined)"
+    "plot_rf_features(r_combined, features_combined)"
    ],
    "metadata": {
     "collapsed": false
